# Auto-Applier

./: .env.example  .gitignore  CLAUDE.md  README.md  SETUP.md  build.py  build_v3.py  pyproject.toml  run.bat  run.py  run_v3.py  setup.bat  update.bat
.claude/skills/auto-applier/: SKILL.md
auto_applier/: __init__.py  __main__.py  analytics.py  config.py  copilot.py  doctor.py  log_setup.py  main.py  notify.py  onboarding_chat.py  reconcile.py  research.py  setup_ops.py  update.py
auto_applier/analysis/: gap_tracker.py  ghost_check.py  learning_goals.py  observability.py  outcome.py  patterns.py  report.py  research.py  title_archetype.py  title_expansion.py
auto_applier/browser/: anti_detect.py  base_platform.py  camoufox_session.py  easy_apply.py  form_filler.py  job_search.py  label_filters.py  linkedin_auth.py  liveness.py  nodriver_session.py  selector_check.py  selector_utils.py  session.py
auto_applier/cli/: __init__.py  main.py
auto_applier/config/: __init__.py  settings.py  strategy.py
auto_applier/data/: __init__.py  ats_companies.csv
auto_applier/db/: __init__.py  engine.py  repositories.py  schema.sql
auto_applier/domain/: __init__.py  dedup.py  job_family.py  location.py  models.py  state.py
auto_applier/gui/: dashboard.py  styles.py  tooltip.py  wizard.py
auto_applier/gui/panels/: __init__.py  almost.py  job_review.py  outcome_tracker.py  refine.py  resume_evolution.py  skill_chat.py  trends.py  trends_skill_chat.py
auto_applier/gui/steps/: answers.py  personal.py  (+8 more)
auto_applier/inbox/: __init__.py  classify.py  fetcher.py  match.py  parse.py  repo.py  worker.py
auto_applier/llm/: __init__.py  base.py  cache.py  complete.py  embed.py  gemini_backend.py  ollama_backend.py  prompts.py  router.py  rule_backend.py
auto_applier/orchestrator/: __init__.py  active_hours.py  engine.py  events.py  pipeline.py  platform_pauses.py
auto_applier/pipeline/: __init__.py  apply_worker.py  discover_worker.py  filter_worker.py  manual_apply.py  optimize_worker.py  quiet_hours.py  retention.py  review_batch.py  scheduler.py  score_worker.py  seed_worker.py  stage.py
auto_applier/resume/: __init__.py  answer_resolver.py  archetypes.py  cover_autogen.py  cover_letter.py  cover_letter_service.py  evolution.py  extract.py  factbank.py  followup_writer.py  generate.py  guard.py  manager.py  outreach.py  parser.py  pdf_converter.py  proposed.py  refine.py  render.py  salary.py  seed_answers.py  skills.py  story_bank.py  tailor.py  tailor_validator.py
auto_applier/scoring/: models.py  scorer.py
auto_applier/sources/: __init__.py  ashby.py  ats_directory.py  greenhouse.py  health.py  jobspy.py  lever.py
auto_applier/storage/: dedup.py  integrity.py  migrations.py  models.py  repository.py
auto_applier/telemetry/: __init__.py  client.py  diagnostics.py  mirror.py  scrub.py  sink.py
auto_applier/web/: __init__.py  app.py  control.py  headed.py  hotkey.py  idle.py  onboarding.py  routes.py  service.py  state.py  views.py
av3/: analytics.py  doctor.py  reconcile.py
av3/cli/: __init__.py  main.py
av3/config/: __init__.py  settings.py  strategy.py
av3/db/: __init__.py  engine.py  repositories.py  schema.sql
av3/domain/: __init__.py  models.py  state.py
av3/llm/: __init__.py  complete.py  prompts.py
av3/pipeline/: __init__.py  apply_worker.py  filter_worker.py  optimize_worker.py  retention.py  scheduler.py  score_worker.py  stage.py
av3/resume/: __init__.py  answer_resolver.py  generate.py  guard.py  render.py  seed_answers.py
av3/sources/: __init__.py  health.py  jobspy.py
av3/telemetry/: __init__.py  client.py  diagnostics.py  mirror.py  scrub.py  sink.py
av3/web/: __init__.py  app.py  control.py  headed.py  hotkey.py  idle.py  onboarding.py  routes.py  service.py  state.py  views.py
docs/: v3-architecture.md
installer/: README.md  auto_applier.iss  build_installer.py  license.txt  post_install.ps1
relay/: README.md  schema.sql  worker.js  wrangler.toml
scripts/: audit_qa.py  av3-launcher.cmd  av3-launcher.sh  make_test_fixtures.py  measure_enterprise_score.py  recaptcha_enterprise_setup.md  refresh_fixtures.py  register-discovery-task.ps1  run_smoke.py  smoketest_captcha_score.py  write_version.py
tests/: conftest.py  test_active_hours.py  test_analytics.py  test_answer_hint_resolution.py  test_answer_resolver.py  test_answers_chat.py  test_answers_delete_defer.py  test_answers_format.py  test_anti_detect.py  test_anti_detect_hover_filter.py  test_apply_driver.py  test_apply_submit_outcome.py  test_apply_worker.py  test_archetypes.py  test_ashby_apply.py  test_atomic_rewrite.py  test_ats_api.py  test_ats_live_integration.py  test_ats_quick_apply.py  test_ats_slug_ux.py  test_base_platform.py  test_budget_counting.py  test_cache.py  test_camoufox_scaffold.py  test_captcha_detection.py  test_cli_applied.py  test_cli_apply.py  test_cli_ask.py  test_cli_cover.py  test_cli_filter.py  test_cli_launch.py  test_cli_observability.py  test_cli_optimize.py  test_cli_outcome.py  test_cli_prune_by_job_id.py  test_cli_queue.py  test_cli_reconcile.py  test_cli_retention.py  test_cli_run.py  test_cli_score.py  (+134 more)
tests/eval/: test_resume_extract_quality.py  test_score_quality.py
tests_v3/: conftest.py  test_analytics.py  test_answer_resolver.py  test_apply_driver.py  test_apply_worker.py  test_ashby_apply.py  test_cli_apply.py  test_cli_filter.py  test_cli_launch.py  test_cli_observability.py  test_cli_optimize.py  test_cli_outcome.py  test_cli_reconcile.py  test_cli_retention.py  test_cli_run.py  test_cli_score.py  test_cli_telemetry.py  test_config.py  test_db.py  test_detect.py  test_events.py  test_filter_worker.py  test_greenhouse.py  test_guard.py  test_jobspy_source.py  test_learn_trends.py  test_lever_apply.py  test_lever_ashby.py  test_live_smoke.py  test_mirror_client.py  test_mirror_queue.py  test_optimize_worker.py  test_quiet_hours.py  test_reconcile.py  test_retention.py  test_salary.py  test_scheduler.py  test_score_worker.py  test_selector_drift.py  test_session_expiry.py  (+8 more)
tests_v3/eval/: golden_set.jsonl  test_score_quality.py
(+71 files in other folders)
