[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-applier"
version = "2.0.0"
description = "AI-powered automated job application tool with multi-platform support"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "patchright>=1.50",
    "playwright>=1.40",
    "playwright-stealth>=1.0.6",
    "pdfplumber>=0.10",
    "python-docx>=1.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pyinstaller>=6.0",
]
# Optional anti-detect backend for LinkedIn discovery. Per Tier 4
# research, patchright loses to LinkedIn's TLS/JA4 fingerprinting;
# Nodriver drives raw CDP without Playwright's wire-protocol
# signature. Install with: ``pip install -e ".[nodriver]"``.
nodriver = [
    "nodriver>=0.40",
]
# Optional Camoufox anti-detect backend (Phase 1 scaffold, 2026-05-03).
# Camoufox patches Firefox at the C++/engine level — the only OSS
# tool credibly attacking the JA4/JA3 + canvas/WebGL fingerprint
# surface that defeats Chrome-based stealth on Cloudflare-fronted
# sites. The maintainer was inactive Q1 2026 but resumed mid-April
# 2026 (PRs #576/579/586 dated 2026-04-24 through 2026-04-29).
# Latest cut is still v146.0.1-beta.25 from January 2026 and is
# explicitly experimental — we ship the scaffold so we're ready
# when a stable release lands. Install with:
#   pip install -e ".[camoufox]"
# Then run: camoufox fetch  (downloads the patched Firefox ~200 MB)
camoufox = [
    "camoufox[geoip]>=0.4",
]

[project.scripts]
auto-applier = "auto_applier.main:cli"

[project.gui-scripts]
auto-applier-gui = "auto_applier.gui.wizard:launch_wizard"

[tool.setuptools.packages.find]
include = ["auto_applier*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that hit live external services (network required)",
]
# Skip integration tests by default; opt in via `pytest -m integration`.
addopts = "-m 'not integration'"
