[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-applier"
version = "2.0.0"
description = "AI-powered automated job application tool with multi-platform support"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "patchright>=1.50",
    "playwright>=1.40",
    "playwright-stealth>=1.0.6",
    "pdfplumber>=0.10",
    "python-docx>=1.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pyinstaller>=6.0",
]
# Optional anti-detect backend for LinkedIn discovery. Per Tier 4
# research, patchright loses to LinkedIn's TLS/JA4 fingerprinting;
# Nodriver drives raw CDP without Playwright's wire-protocol
# signature. Install with: ``pip install -e ".[nodriver]"``.
nodriver = [
    "nodriver>=0.40",
]
# Optional Camoufox anti-detect backend (Phase 1 scaffold, 2026-05-03).
# Camoufox patches Firefox at the C++/engine level — the only OSS
# tool credibly attacking the JA4/JA3 + canvas/WebGL fingerprint
# surface that defeats Chrome-based stealth on Cloudflare-fronted
# sites. The maintainer was inactive Q1 2026 but resumed mid-April
# 2026 (PRs #576/579/586 dated 2026-04-24 through 2026-04-29).
# Latest cut is still v146.0.1-beta.25 from January 2026 and is
# explicitly experimental — we ship the scaffold so we're ready
# when a stable release lands. Install with:
#   pip install -e ".[camoufox]"
# Then run: camoufox fetch  (downloads the patched Firefox ~200 MB)
camoufox = [
    "camoufox[geoip]>=0.4",
]

# --- v3 rewrite (separate `av3` package; v2 above stays runnable as a porting
#     reference — see docs/v3-architecture.md §3). Install with: pip install -e ".[v3]"
v3 = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "rapidfuzz>=3.0",        # fabrication-guard L1 fuzzy entity match (spec §6b)
    "python-dateutil>=2.8",  # fabrication-guard L1 date-range checks
]
# Optional JobSpy discovery for browser boards (Indeed/ZipRecruiter, Phase 2). Smoketest
# in research/prior-art-and-methodology.md S3 confirmed Indeed = no rate limit, works out
# of the box. Pulls pandas as a transitive dep, hence opt-in. Install with:
#   pip install -e ".[v3,jobspy]"
jobspy = [
    "python-jobspy>=1.1.50",
]

[project.scripts]
auto-applier = "auto_applier.main:cli"
av3 = "av3.cli.main:cli"

[project.gui-scripts]
auto-applier-gui = "auto_applier.gui.wizard:launch_wizard"

[tool.setuptools.packages.find]
include = ["auto_applier*", "av3*"]

[tool.setuptools.package-data]
av3 = ["db/*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests", "tests_v3"]
markers = [
    "integration: tests that hit live external services (network required)",
    "eval: scoring quality eval harness against a labeled golden set (live LLM required)",
]
# Skip integration + eval by default; opt in via `pytest -m integration` or
# `pytest -m eval` (the eval harness needs a reachable Ollama or Gemini key).
addopts = "-m 'not integration and not eval'"
